<resources>
    <string name="app_name">VENTILO</string>
    <string name="selected">Selected</string>
    <string name="team_header">Team</string>
    <string name="directory">Directory</string>
    <string name="btm_nav_menu_map">MAP</string>
    <string name="btm_nav_menu_timeline">TIMELINE</string>
    <string name="btm_nav_menu_video_stream">STREAM</string>
    <string name="btm_nav_menu_report">REPORT</string>
    <string name="btm_nav_menu_status">STATUS</string>
    <string name="btm_panel_radio">Radio</string>
    <string name="btm_panel_since">since</string>
    <string name="app">ToyVPN</string>
    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="secret">Shared Secret:</string>
    <string name="connect">Connect!</string>
    <string name="disconnect">Disconnect!</string>
    <string name="connecting">ToyVPN is connecting...</string>
    <string name="connected">ToyVPN is connected!</string>
    <string name="disconnected">ToyVPN is disconnected!</string>
    <string name="btn_back">Back</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_create">Create</string>
    <string name="btn_done">Done</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_port">Port</string>
    <string name="btn_pull_from_excel">Pull From Excel</string>
    <string name="btn_push_to_excel">Push To Excel</string>
    <string name="btn_report">Report</string>
    <string name="btn_save">Save</string>
    <string name="btn_send">Send</string>
    <string name="btn_share_location">Share Location</string>
    <string name="btn_starboard">Starboard</string>
    <string name="btn_stream">Stream</string>
    <string name="btn_subscribe">Subscribe</string>
    <string name="btn_sync_up">Sync Up</string>
    <string name="btn_top">Top</string>
    <string name="btn_update">Update</string>
    <string name="progress_bar_loading_data">Loading Data...</string>
    <string name="snackbar_login_invalid_user">Invalid User ID</string>
    <string name="snackbar_login_user_already_logged_in">User account is already
        logged in from another device</string>
    <string name="snackbar_login_selected_radio_no_is_used">Selected radio number
        is already being used by another device</string>
    <string name="snackbar_wave_relay_client_connected_message">Wave Relay radio connection established.</string>
    <string name="snackbar_wave_relay_client_disconnected_message">Wave Relay radio connection lost.</string>
    <string name="snackbar_screenshot_taken_message">Screenshot has been taken.</string>
    <string name="snackbar_screenshot_create_sitrep_message">Create a new SitRep with this screenshot?</string>
    <string name="snackbar_form_incomplete_message">Form is incomplete.
        Please fill in the following field(s):</string>
    <string name="snackbar_sitrep_sent_message">Sit Rep has been sent</string>
    <string name="snackbar_sitrep_updated_message">Sit Rep has been updated</string>
    <string name="snackbar_sitrep_send_confirmation_message">Send Sitrep?</string>
    <string name="snackbar_sitrep_update_confirmation_message">Update Sitrep?</string>
    <string name="snackbar_sitrep_file_saved_successfully">Sit Rep has been successfully saved into file.</string>
    <string name="snackbar_confirmation_action">OK</string>
    <string name="snackbar_motion_log_file_saved_successfully">Motion log has been successfully saved into file.</string>
    <string name="snackbar_task_select_task_phase_no_option">All Task Phases have been assigned</string>
    <string name="snackbar_task_task_name_no_option"><![CDATA[There are no existing Task Names.\n\nPlease type one out instead.]]></string>
    <string name="snackbar_task_sent_message">Task has been sent</string>
    <string name="snackbar_task_updated_message">Task has been updated</string>
    <string name="snackbar_task_create_confirmation_message">Create Task?</string>
    <string name="snackbar_task_update_confirmation_message">Update Task?</string>
    <string name="snackbar_settings_save_message">Save Settings?</string>
    <string name="snackbar_settings_pull_from_excel_message">Pull data from Excel?</string>
    <string name="snackbar_settings_pull_from_excel_successful_message">Task and User data are successfully pulled.</string>
    <string name="snackbar_settings_pull_from_excel_failed_message"><![CDATA[Data pull failed.\n\nExcel/Ventilo_Database.xlsx file does not exist.]]></string>
    <string name="snackbar_settings_ship_data_pull_from_excel_successful_message">Ship data is successfully pulled.</string>
    <string name="snackbar_settings_ship_data_pull_from_excel_failed_message"><![CDATA[Data pull failed.\n\nExcel/Ship_Config.xlsx file does not exist.]]></string>
    <string name="snackbar_settings_push_to_excel_message">Push data to Excel?</string>
    <string name="snackbar_settings_push_to_excel_successful_message">Data is successfully pushed.</string>
    <string name="snackbar_settings_push_from_excel_failed_message"><![CDATA[Data push failed]]></string>
    <string name="snackbar_settings_sync_with_message">Sync with</string>
    <string name="snackbar_settings_data_overridden_message"><![CDATA[\n\nData will be overridden.]]></string>
    <string name="snackbar_settings_sync_up_request_sent_message">Data sync request has been sent.</string>
    <string name="snackbar_settings_sync_up_successful_message">Data is successfully synced.</string>
    <string name="snackbar_settings_sync_up_failed_message">Data sync failed.</string>
    <string name="snackbar_settings_logout_message">Logout?</string>
    <string name="snackbar_settings_logout_successful_message">Logged out succesfully.</string>
    <string name="snackbar_send_error_current_user_not_connected_message"><![CDATA[You are not connected to the network.\n\nPlease try again when you are online.]]></string>
    <string name="snackbar_send_error_user_not_connected_message"><![CDATA[lost connection to the network.\n\nPlease try again later.]]></string>
    <string name="snackbar_send_error_cct_not_connected_message"><![CDATA[No CCT is not connected to the network.\n\nPlease try again later.]]></string>
    <string name="snackbar_send_error_is_not_connected_message"><![CDATA[is not connected to the network.\n\nPlease try again later.]]></string>
    <string name="snackbar_send_error_are_not_connected_message"><![CDATA[are not connected to the network.\n\nPlease try again later.]]></string>
    <string name="login_username">User ID</string>
    <string name="login_password">Password</string>
    <string name="login_radio_number">Radio No</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_footprint">Designed And Developed by RSN-DSTA</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string-array name="login_radio_ip_addresses">
        <item>198.18.5.1</item>
        <item>198.18.5.2</item>
        <item>198.18.5.3</item>
        <item>198.18.5.4</item>
        <item>198.18.5.5</item>
        <item>198.18.5.6</item>
        <item>198.18.5.7</item>
        <item>198.18.5.8</item>
        <item>198.18.5.9</item>
        <item>198.18.5.10</item>
        <item>198.18.5.65</item>
        <item>198.18.5.66</item>
        <item>198.18.5.67</item>
        <item>198.18.5.68</item>
        <item>198.18.5.69</item>
        <item>198.18.5.100</item>
        <item>198.18.5.101</item>
        <item>198.18.5.102</item>
        <item>198.18.5.103</item>
        <item>198.18.5.104</item>
        <item>198.18.5.105</item>
        <item>198.18.5.106</item>
        <item>198.18.5.107</item>
        <item>198.18.5.108</item>
        <item>198.18.5.109</item>
        <item>198.18.5.110</item>
    </string-array>
    <string-array name="login_user_mobile_ip_addresses">
        <item>198.18.2.1</item>
        <item>198.18.2.2</item>
        <item>198.18.2.3</item>
        <item>198.18.2.4</item>
        <item>198.18.2.5</item>
        <item>198.18.2.6</item>
        <item>198.18.2.7</item>
        <item>198.18.2.8</item>
        <item>198.18.2.9</item>
        <item>198.18.2.10</item>
        <item>198.18.2.65</item>
        <item>198.18.2.66</item>
        <item>198.18.2.67</item>
        <item>198.18.2.68</item>
        <item>198.18.2.69</item>
        <item>198.18.2.100</item>
        <item>198.18.2.101</item>
        <item>198.18.2.102</item>
        <item>198.18.2.103</item>
        <item>198.18.2.104</item>
        <item>198.18.2.105</item>
        <item>198.18.2.106</item>
        <item>198.18.2.107</item>
        <item>198.18.2.108</item>
        <item>198.18.2.109</item>
        <item>198.18.2.110</item>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
    </string-array>
    <string name="map_page_title">Map</string>
    <string name="map_blueprint_loading_coord">Loading coordinates</string>
    <string name="map_blueprint_loading_bearing">Loading bearing</string>
    <string name="map_blueprint_loading_status">Loading status</string>
    <string name="dashboard_sitrep_personnel_status">Personnel Status</string>
    <string name="dashboard_task_phase_status">Phase Status</string>
    <string name="dashboard_task_phase_one">Phase 1</string>
    <string name="dashboard_task_phase_two">Phase 2</string>
    <string name="dashboard_task_phase_three">Phase 3</string>
    <string name="dashboard_task_phase_four">Phase 4</string>
    <string name="sitrep_total_count_title">Total</string>
    <string name="sitrep_location">Location</string>
    <string name="sitrep_T">T</string>
    <string name="sitrep_S">S</string>
    <string name="sitrep_D">D</string>
    <string name="sitrep_detail_situation_report">Situation Report</string>
    <string name="task_title_header">Title</string>
    <string name="task_description_header">Description</string>
    <string name="callsign">Callsign</string>
    <string name="logsloc">Logs Location</string>
    <string name="mqhost">MQ Host</string>
    <string name="mqport">MQ Port</string>
    <string name="mqTopic">MQ Topic</string>
    <string name="mqUser">MQ User</string>
    <string name="mqPassword">MQ Password</string>
    <string name="Deck7offset">Deck 7 Offset</string>
    <string name="Deck6offset">Deck 6 Offset</string>
    <string name="Deck5offset">Deck 5 Offset</string>
    <string name="Deck4offset">Deck 4 Offset</string>
    <string name="Deck3offset">Deck 3 Offset</string>
    <string name="Deck2offset">Deck 2 Offset</string>
    <string name="DeckTweenoffset">Tween Deck Offset</string>
    <string name="DeckMainoffset">Main Deck Offset</string>
    <string name="Deck2ndoffset">2nd Deck Offset</string>
    <string name="Deck3rdoffset">3rd Deck Offset</string>
    <string name="DeckPlatformoffset">Platform Deck Offset</string>
    <string name="realheight">Real height</string>
    <string name="mapheight">Map height</string>
    <string name="estimoteId">Estimote App ID</string>
    <string name="estimoteToken">Estimote App Token</string>
    <string name="estimoteDist">Estimote Proximity activation distance (m))</string>
</resources>