<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_dashboard_task_phase_status_fragment"
    android:layout_width="@dimen/dashboard_task_phase_status_main_container_width"
    android:layout_height="match_parent"
    android:background="@drawable/img_btn_background_without_border"
    android:orientation="vertical"
    android:paddingStart="@dimen/elements_large_margin_spacing"
    android:paddingTop="@dimen/elements_margin_spacing"
    android:paddingEnd="@dimen/elements_large_margin_spacing">

    <sg.gov.dsta.mobileC3.ventilo.util.component.C2OpenSansSemiBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_task_phase_status"
        android:textColor="@color/primary_highlight_cyan"
        android:textSize="@dimen/text_view_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/elements_margin_spacing"
        android:orientation="horizontal">

        <sg.gov.dsta.mobileC3.ventilo.util.component.C2OpenSansRegularTextView
            android:layout_width="@dimen/dashboard_sitrep_personnel_status_team_container_width"
            android:layout_height="wrap_content"
            android:text="@string/team_header"
            android:textColor="@color/primary_text_grey"
            android:textSize="@dimen/text_view_small_text_size" />

        <sg.gov.dsta.mobileC3.ventilo.util.component.C2OpenSansRegularTextView
            android:layout_width="@dimen/dashboard_task_phase_status_phase_container_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dashboard_task_phase_one"
            android:textColor="@color/primary_text_grey"
            android:textSize="@dimen/text_view_small_text_size" />

        <sg.gov.dsta.mobileC3.ventilo.util.component.C2OpenSansRegularTextView
            android:layout_width="@dimen/dashboard_task_phase_status_phase_container_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dashboard_task_phase_two"
            android:textColor="@color/primary_text_grey"
            android:textSize="@dimen/text_view_small_text_size" />

        <sg.gov.dsta.mobileC3.ventilo.util.component.C2OpenSansRegularTextView
            android:layout_width="@dimen/dashboard_task_phase_status_phase_container_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dashboard_task_phase_three"
            android:textColor="@color/primary_text_grey"
            android:textSize="@dimen/text_view_small_text_size" />

        <sg.gov.dsta.mobileC3.ventilo.util.component.C2OpenSansRegularTextView
            android:layout_width="@dimen/dashboard_task_phase_status_phase_container_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dashboard_task_phase_four"
            android:textColor="@color/primary_text_grey"
            android:textSize="@dimen/text_view_small_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line_primary_grey" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_dashboard_task_phase_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

</LinearLayout>