<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/side_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/side_margin"
            android:orientation="horizontal">

            <sg.gov.dsta.mobileC3.ventilo.util.component.C2OpenSansBlackTextView
                android:id="@+id/tv_task_title_header"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/side_margin"
                android:gravity="center_vertical"
                android:text="@string/task_title_header"
                android:textSize="@dimen/sub_header_text_size" />

            <Spinner
                android:id="@+id/spinner_task_title_detail"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/elements_margin_spacing"
                android:layout_marginBottom="@dimen/elements_margin_spacing"
                android:background="@drawable/spinner_rect"
                android:gravity="center_vertical"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <sg.gov.dsta.mobileC3.ventilo.util.component.C2OpenSansItalicLightEditTextView
            android:id="@+id/etv_task_title_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/side_margin"
            android:background="@drawable/rounded_edit_text"
            android:padding="@dimen/side_margin"
            android:textColor="@color/background_main_black"
            android:textColorHint="@color/circle_image_border_grey"
            android:textSize="@dimen/hint_text_size" />

        <sg.gov.dsta.mobileC3.ventilo.util.component.C2OpenSansBlackTextView
            android:id="@+id/tv_task_description_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_description_header"
            android:textSize="@dimen/sub_header_text_size" />

        <sg.gov.dsta.mobileC3.ventilo.util.component.C2OpenSansItalicLightEditTextView
            android:id="@+id/etv_task_description_detail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/elements_margin_spacing"
            android:layout_marginBottom="@dimen/side_margin"
            android:background="@drawable/rounded_edit_text"
            android:gravity="top"
            android:padding="@dimen/side_margin"
            android:textColor="@color/background_main_black"
            android:textColorHint="@color/circle_image_border_grey"
            android:textSize="@dimen/hint_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_2nd_level_margin"
            android:gravity="center">

            <sg.gov.dsta.mobileC3.ventilo.util.component.C2OpenSansBlackButton
                android:id="@+id/btn_task_detail_report"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:foreground="?android:selectableItemBackground"
                android:background="@drawable/img_btn_background"
                android:text="@string/btn_report"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>